fix: align left side image and logo, responsive

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /* Main CSS Begins */
 
 *{
-    --left-panel-width: 30vw;
+    --left-panel-width: 25vw;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -13,9 +13,6 @@
 
 
 
-  body span{
-    font-size: 75px ;
-  }
 
 body, .container{
 width: 100vw;
@@ -38,9 +35,9 @@ color:black;
 
 /* plant */
 .plant{
-    /* width: var(--left-panel-width); */
+    width: var(--left-panel-width);
     /* width:fit-content; */
-    width:100%;
+    /* width:100%; */
     height:100%;
     object-fit: cover;
     /* min-height:570px; */
@@ -58,22 +55,26 @@ img.odin{
 
 .logo{
     position:absolute;
-    width: 30vw;
-    length: 200px;
+    width: 396px;
+    height: 200px;
     display:flex;
     align-items: center;
+    justify-content: center;
+    
     top:250px;
     padding: 15px 0 15px 0;
  
+    width: var(--left-panel-width);
     background-color:rgba(0, 0, 0, 0.4);
-    display:flex;
-    justify-content: center;
+
 }
 
 
 span.odin-span{
     font-family: odin;
     color: white;
+
+    font-size: 75px ;
 
 }
 
@@ -83,9 +84,7 @@ p{
 }
 
 .left{
-    flex: 1 1 500px;
-    /* overflow:hidden */
-    border:5px solid red
+
 }
 
 .right{
@@ -94,3 +93,28 @@ p{
     display:flex;
     flex-direction: column;
 }
+
+li{
+    list-style: none;
+}
+input:focus{}
+
+
+input:invalid{}
+
+
+input:required{}
+
+
+ul{
+    display:flex;
+    flex-wrap: wrap;
+}
+li{
+    margin: 15px;
+    flex: 1 1 45%;
+    display:flex;
+    flex-direction: column;
+    width: 100px
+}
+
